--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
             <button type="submit" class="submit-btn">Add Entry</button>
         </form>
 
-        <h2 class="expense-title">Outlay:</h2>
+        <h2 class="expense-title">outlay:</h2>
         <ul class="expense-list" id="expenseList">
         </ul>
     </div>
